<resources>
    <string name="app_name">Test</string>

    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="Text_area">Text area</string>
    <string name="no_projects">No projects</string>
    <string name="add">Add</string>
    <string name="edit_screenshot">Edit screenshot</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="no_scanner">No Scanner Found</string>
    <string name="download_scanner_activity">Download a scanner code activity?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="projects">Projects</string>
    <string name="gallery">Gallery</string>
    <string name="some_description">img button</string>
    <string name="delete">delete</string>

</resources>