<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinnerProjects"
            android:layout_height="30dp"
            android:layout_width="match_parent"
            android:prompt="@string/title">

        </android.support.v7.widget.AppCompatSpinner>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/title" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:minLines="5"
                android:maxLines="8"
                android:hint="@string/Text_area"
                android:textSize="25sp"
                android:gravity="top"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_screenshot"
                android:layout_weight="1"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="0"
                android:paddingRight="25dp"
                android:background="@drawable/ic_keyboard_arrow_right"
                android:contentDescription="@string/some_description" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp">

            <Button android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:background="@color/dim_foreground_material_dark"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="bottom"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="10dp"/>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:background="@color/primary_dark"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:paddingRight="10dp"/>
        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>