<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/projects_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible">




            <ListView
                android:id="@+id/projectsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/addProject"
                android:background="@drawable/ic_add_box"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/some_description" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/no_projects"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/no_projects"
                android:layout_gravity="center_horizontal"
                android:layout_above="@+id/addProject1"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="57dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/add"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/textView2" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/addProject1"
                android:background="@drawable/ic_add_box"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/some_description"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true" />

    </RelativeLayout>


</RelativeLayout>
